@@ -21,7 +21,7 @@ var Prototype = {
         document.createElement('form').__proto__
   },
 
-  ScriptFragment: '<script[^>]*>([\\S\\s]*?)<\/script>',
+  ScriptFragment: '<script[^>]*>([^\\x00]*?)<\/script>',
   JSONFilter: /^\/\*-secure-([\s\S]*)\*\/\s*$/,  
   
   emptyFunction: function() { },
